Fixed spacing issue in restaurant

--- a/P1/restaurant_page/restaurant.css
+++ b/P1/restaurant_page/restaurant.css
@@ -6,52 +6,10 @@
 }
 
 #logo {
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0;
+    padding: 0;
     height: auto;
-}
-
-.search_row {
-    padding-top: 190px;
-}
-
-#search {
     width: 100%;
-    height: 500px;
-    background-image: url("purple2_cropped.jpg");
-    background-color: blueviolet;
-    display: grid;
-    justify-content: center;
-    text-align: center;
-}
-
-#search_bar {
-    margin-top: 15px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.card-img-top {
-    height: 300px;
-    width: 100%;
-}
-
-.card-deck {
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
-}
-
-.card_row {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.btn-outline-primary {
-    color: black;
-    background-color:grey;
-    background-image: none;
-    border-color: grey;
 }
 
 body {
